@@ -23,7 +23,7 @@
 # IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM, OUT OF OR IN
 # CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.
 #
-# $Id: buildtool,v 1.154 2001/08/20 22:21:29 mej Exp $
+# $Id: buildtool,v 1.155 2001/08/21 22:47:40 mej Exp $
 #
 
 # Include the Perl Modules we need
@@ -133,7 +133,7 @@ build_single_package
 
     # If there are binaries, no point in trying to build source.
     if ($pkgs->{$pkg}{BINS}) {
-        &pkgvar_filename(join(' ', &pkgvar_filename(), @{$pkgs->{$pkg}{BINS}}));
+        $outfiles = join(' ', &pkgvar_filename(), @{$pkgs->{$pkg}{BINS}});
     } else {
         # Build the source
         &pkgvar_target($target);
@@ -162,7 +162,7 @@ build_package_forked
             nprint "Spawned child process $pid to build $pkg (log file is $logfile)\n";
             return $pid;
         } elsif (defined $pid) {
-            my $err;
+            my ($err, $buildroot);
 
             # Child -- reset state as needed and jump to build process
             close $GLOBAL_LOG if ($GLOBAL_LOG);
@@ -177,8 +177,13 @@ build_package_forked
                 open(STDERR, ">&LOGFILE");
                 select LOGFILE; $| = 1;
             }
+            $buildroot = &pkgvar_buildroot();
+            if ($buildroot) {
+                &pkgvar_buildroot("$buildroot/$pkg.$$");
+            } else {
+                &pkgvar_buildroot("/var/tmp/avalon-buildroot.$$");
+            }
             $err = &build_single_package($pkg);
-            &cleanup_build_tree($opt_clean) if ($err == AVALON_SUCCESS);
             close(LOGFILE) if ($GLOBAL_LOG);
             exit ($err);
         } elsif ($! !~ /No more processes/ && $! !~ /Resource temporarily unavailable/) {
@@ -403,7 +408,7 @@ parallel_build
         }
         # End of loop.  Time to spawn the next child.
     }
-    &cleanup_build_tree($opt_clean);
+    &cleanup_build_tree();
     return (scalar(@failed_pkgs) ? AVALON_PACKAGE_FAILED : AVALON_SUCCESS);
 }
 
@@ -428,7 +433,7 @@ build_product
     }
 
     # Now we clean up.
-    &cleanup_build_tree($opt_clean);
+    &cleanup_build_tree();
     return (scalar(@failed_pkgs) ? AVALON_PACKAGE_FAILED : AVALON_SUCCESS);
 }
 
@@ -495,7 +500,7 @@ main
     #
     if ($opt_v) {
         # Do not edit this variable.  It is updated automatically by CVS when you commit
-        my $rcs_info = 'CVS Revision $Revision: 1.154 $ created on $Date: 2001/08/20 22:21:29 $ by $Author: mej $ ';
+        my $rcs_info = 'CVS Revision $Revision: 1.155 $ created on $Date: 2001/08/21 22:47:40 $ by $Author: mej $ ';
 
         $rcs_info =~ s/\$\s*Revision: (\S+) \$/$1/;
         $rcs_info =~ s/\$\s*Date: (\S+) (\S+) \$/$1 at $2/;
@@ -528,8 +533,7 @@ main
     $global_user = $opt_U;
     $global_tree = $opt_D;
     $global_tag = $opt_T;
-
-    # Target package format
+    &pkgvar_cleanup($opt_clean);
     &pkgvar_target($opt_t);
 
     # Figure out parallelization stuff
@@ -553,7 +557,7 @@ main
     } else {
         $prod = $prodname = &basename(&getcwd());
     }
-    &pkgvar_buildroot($ENV{AVALON_BUILDROOT} ? $ENV{AVALON_BUILDROOT} : "/var/tmp/buildtool.$$");
+    &pkgvar_buildroot($ENV{AVALON_BUILDROOT});
 
     if (! $opt_clean) {
         $opt_clean = "build";
